// replication test of go-plugin key-value store plugin

syntax = "proto3";

package keystore;

// the get request
message GetRequest {
	string key = 1;
}

message GetResponse {
	string value = 1;
}

message PutRequest {
	string key = 1;
	string value = 2;
}

message ShutdownRequest {
	string clientid = 1;
}

message ShutdownResponse {
	bool result = 1;
}

message Empty {}

// the key store service definition
service KeyStore {
	rpc Get (GetRequest) returns (GetResponse);
	rpc Put (PutRequest) returns (Empty);
	rpc Shutdown (ShutdownRequest) returns (ShutdownResponse);
}
